--- a/timestamp_experiment.ipynb
+++ b/timestamp_experiment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -28,61 +28,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[0 1 0 0]\n",
-      "  [0 1 0 1]\n",
-      "  [1 0 1 1]\n",
-      "  ..., \n",
-      "  [1 1 1 1]\n",
-      "  [1 1 0 0]\n",
-      "  [1 1 0 1]]\n",
-      "\n",
-      " [[0 1 1 0]\n",
-      "  [1 1 1 0]\n",
-      "  [1 0 1 0]\n",
-      "  ..., \n",
-      "  [1 1 1 1]\n",
-      "  [1 1 0 0]\n",
-      "  [0 1 1 0]]\n",
-      "\n",
-      " [[0 1 0 0]\n",
-      "  [1 0 1 0]\n",
-      "  [1 0 1 0]\n",
-      "  ..., \n",
-      "  [0 1 0 1]\n",
-      "  [0 1 0 1]\n",
-      "  [0 0 0 0]]\n",
-      "\n",
-      " ..., \n",
-      " [[1 1 0 0]\n",
-      "  [1 1 1 0]\n",
-      "  [1 1 0 1]\n",
-      "  ..., \n",
-      "  [1 0 1 0]\n",
-      "  [0 0 1 1]\n",
-      "  [1 1 0 0]]\n",
-      "\n",
-      " [[0 0 1 1]\n",
-      "  [1 0 0 1]\n",
-      "  [0 1 0 0]\n",
-      "  ..., \n",
-      "  [0 1 0 0]\n",
-      "  [0 0 1 1]\n",
-      "  [1 1 1 1]]\n",
-      "\n",
-      " [[0 0 1 0]\n",
-      "  [1 1 1 0]\n",
-      "  [1 0 1 1]\n",
-      "  ..., \n",
-      "  [0 1 0 0]\n",
-      "  [0 1 0 1]\n",
-      "  [0 1 0 1]]]\n"
+      "<class 'datetime.datetime'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_start = d.datetime.utcnow(); #Use this if this notebook initiates the data collection\n",
+    "print(run_start);\n",
+    "#run_start = 'ex' Use if you wish to manually input the run start"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "thres_volt='10 mV';\n",
+    "comment='Fill with any comments';\n",
+    "temp='ex';\n",
+    "freq='50MHz';                    #Should be changed if a different clock speed is used"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chronopixel_run_2018-06-06 12:34:43.947769\n"
      ]
     }
    ],
    "source": [
     "test_data = r.randint(2, size=(4095,400,4));\n",
+    "run_store = np.savez_compressed('chronopixel_run_%s' %run_start, test_data);\n",
     "time=[n for n in range(4095)];\n",
-    "print(test_data);"
+    "print('chronopixel_run_%s' %run_start);"
    ]
   },
   {
