--- a/timestamp_experiment.ipynb
+++ b/timestamp_experiment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -28,7 +28,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'datetime.datetime'>\n"
+      "2018-06-07 13:46:02.557903\n"
      ]
     }
    ],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -63,20 +63,95 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "chronopixel_run_2018-06-06 12:34:43.947769\n"
+      "[[[ 0.  0.  1.]\n",
+      "  [ 1.  1.  0.]\n",
+      "  [ 1.  0.  1.]\n",
+      "  ..., \n",
+      "  [ 1.  0.  0.]\n",
+      "  [ 1.  1.  0.]\n",
+      "  [ 0.  1.  0.]]\n",
+      "\n",
+      " [[ 0.  0.  0.]\n",
+      "  [ 0.  0.  0.]\n",
+      "  [ 0.  1.  1.]\n",
+      "  ..., \n",
+      "  [ 0.  0.  1.]\n",
+      "  [ 1.  0.  1.]\n",
+      "  [ 1.  0.  1.]]\n",
+      "\n",
+      " [[ 0.  0.  1.]\n",
+      "  [ 1.  1.  1.]\n",
+      "  [ 1.  1.  0.]\n",
+      "  ..., \n",
+      "  [ 0.  0.  1.]\n",
+      "  [ 0.  0.  0.]\n",
+      "  [ 0.  1.  1.]]\n",
+      "\n",
+      " ..., \n",
+      " [[ 1.  0.  0.]\n",
+      "  [ 0.  0.  0.]\n",
+      "  [ 1.  0.  0.]\n",
+      "  ..., \n",
+      "  [ 1.  1.  0.]\n",
+      "  [ 1.  0.  0.]\n",
+      "  [ 0.  1.  0.]]\n",
+      "\n",
+      " [[ 1.  0.  1.]\n",
+      "  [ 0.  1.  1.]\n",
+      "  [ 0.  0.  0.]\n",
+      "  ..., \n",
+      "  [ 0.  0.  1.]\n",
+      "  [ 1.  0.  1.]\n",
+      "  [ 0.  0.  0.]]\n",
+      "\n",
+      " [[ 1.  0.  0.]\n",
+      "  [ 0.  1.  1.]\n",
+      "  [ 1.  1.  0.]\n",
+      "  ..., \n",
+      "  [ 1.  0.  0.]\n",
+      "  [ 1.  1.  0.]\n",
+      "  [ 0.  0.  1.]]]\n"
      ]
     }
    ],
    "source": [
-    "test_data = r.randint(2, size=(4095,400,4));\n",
-    "run_store = np.savez_compressed('chronopixel_run_%s' %run_start, test_data);\n",
-    "time=[n for n in range(4095)];\n",
-    "print('chronopixel_run_%s' %run_start);"
+    "data=r.randint(2, size=(12285,400));\n",
+    "runs=int(len(data[:,0])/4095);\n",
+    "test_data= np.empty([4095, 400, runs]);\n",
+    "for n in range(runs):\n",
+    "    for m in range((n*4095),((n+1)*4095)):\n",
+    "        for i in range(400):\n",
+    "            test_data[(m-(n*4095))][i][n]=data[m][i];\n",
+    "print(test_data);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chronopixel_run_2018-06-07 13:46:02.557903\n",
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#test_data = np.empty([4095,400,4]);\n",
+    "#test_data = r.randint(2, size=(4095,400,4))\n",
+    "#run_store = np.savez('chronopixel_run_%s' %run_start, test_data); \n",
+    "#time=[n for n in range(4095)];\n",
+    "#print('chronopixel_run_%s' %run_start);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -85,7 +160,9 @@
     "hits=np.empty([len(test_data[:,0,0]),len(test_data[0,0,:])]);\n",
     "for n in range(len(test_data[0,0,:])):\n",
     "    for m in range(len(test_data[:,0,0])):\n",
-    "        hits[m][n]=sum(test_data[m,:,n]);"
+    "        hits[m][n]=sum(test_data[m,:,n]);\n",
+    "hits_store=run_store = np.savez_compressed('chronopixel_hits_%s' %run_start, hits); \n",
+    "#I am getting an error when saving the files. It says the file is not UTF-8 encoded and so saving has been disabled."
    ]
   },
   {
