--- a/timestamp_experiment.ipynb
+++ b/timestamp_experiment.ipynb
@@ -2,24 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import scipy as sc\n",
-    "import math as m\n",
-    "import matplotlib as mp\n",
-    "from matplotlib import pyplot as pl\n",
-    "import datetime as d\n",
-    "import numpy as np\n",
-    "from numpy import random as r"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -28,19 +11,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-06-07 13:46:02.557903\n"
+      "ok\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/walterwilson/anaconda/lib/python3.6/site-packages/IPython/core/interactiveshell.py:2889: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import scipy as sc\n",
+    "import math as m\n",
+    "import matplotlib as mp\n",
+    "from matplotlib import pyplot as pl\n",
+    "import datetime as d\n",
+    "import numpy as np\n",
+    "from numpy import random as r\n",
+    "import os\n",
+    "import ok"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/walterwilson/Chronopixel Data Analysis\n"
      ]
     }
    ],
    "source": [
     "run_start = d.datetime.utcnow(); #Use this if this notebook initiates the data collection\n",
-    "print(run_start);\n",
+    "run_start=run_start.strftime('%m/%d/%Y/%H/%M/%S/%f');\n",
+    "filename= 'chronopixel_hits_%s.npz' %run_start;\n",
+    "print(os.getcwd());\n",
     "#run_start = 'ex' Use if you wish to manually input the run start"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -54,93 +83,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[[ 0.  0.  1.]\n",
-      "  [ 1.  1.  0.]\n",
-      "  [ 1.  0.  1.]\n",
-      "  ..., \n",
-      "  [ 1.  0.  0.]\n",
-      "  [ 1.  1.  0.]\n",
-      "  [ 0.  1.  0.]]\n",
-      "\n",
-      " [[ 0.  0.  0.]\n",
-      "  [ 0.  0.  0.]\n",
-      "  [ 0.  1.  1.]\n",
-      "  ..., \n",
-      "  [ 0.  0.  1.]\n",
-      "  [ 1.  0.  1.]\n",
-      "  [ 1.  0.  1.]]\n",
-      "\n",
-      " [[ 0.  0.  1.]\n",
-      "  [ 1.  1.  1.]\n",
-      "  [ 1.  1.  0.]\n",
-      "  ..., \n",
-      "  [ 0.  0.  1.]\n",
-      "  [ 0.  0.  0.]\n",
-      "  [ 0.  1.  1.]]\n",
-      "\n",
-      " ..., \n",
-      " [[ 1.  0.  0.]\n",
-      "  [ 0.  0.  0.]\n",
-      "  [ 1.  0.  0.]\n",
-      "  ..., \n",
-      "  [ 1.  1.  0.]\n",
-      "  [ 1.  0.  0.]\n",
-      "  [ 0.  1.  0.]]\n",
-      "\n",
-      " [[ 1.  0.  1.]\n",
-      "  [ 0.  1.  1.]\n",
-      "  [ 0.  0.  0.]\n",
-      "  ..., \n",
-      "  [ 0.  0.  1.]\n",
-      "  [ 1.  0.  1.]\n",
-      "  [ 0.  0.  0.]]\n",
-      "\n",
-      " [[ 1.  0.  0.]\n",
-      "  [ 0.  1.  1.]\n",
-      "  [ 1.  1.  0.]\n",
-      "  ..., \n",
-      "  [ 1.  0.  0.]\n",
-      "  [ 1.  1.  0.]\n",
-      "  [ 0.  0.  1.]]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#These next two cells could all read in the data depending on the way the signal output is formatted\n",
     "data=r.randint(2, size=(12285,400));\n",
     "runs=int(len(data[:,0])/4095);\n",
     "test_data= np.empty([4095, 400, runs]);\n",
     "for n in range(runs):\n",
     "    for m in range((n*4095),((n+1)*4095)):\n",
     "        for i in range(400):\n",
-    "            test_data[(m-(n*4095))][i][n]=data[m][i];\n",
-    "print(test_data);"
+    "            test_data[(m-(n*4095))][i][n]=data[m][i];"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "chronopixel_run_2018-06-07 13:46:02.557903\n",
-      "<class 'numpy.ndarray'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#test_data = np.empty([4095,400,4]);\n",
     "#test_data = r.randint(2, size=(4095,400,4))\n",
@@ -151,17 +116,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/Users/walterwilson/Chronopixel Data Analysis/chronopixel_hits_06/11/2018/12/50/09/854258.npz'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-63-5a3365f325ec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0mhits\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'/Users/walterwilson/Chronopixel Data Analysis/%s'\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mfile\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m \u001b[0;34m,\u001b[0m\u001b[0;34m\"w\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;31m#hits_store= np.savez_compressed(filename, a=hits, b=time);\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/Users/walterwilson/Chronopixel Data Analysis/chronopixel_hits_06/11/2018/12/50/09/854258.npz'"
+     ]
+    }
+   ],
    "source": [
+    "time=np.empty([runs,4095]);\n",
+    "for n in range(runs):\n",
+    "    for m in range(4095):\n",
+    "        time[n][m]=(n*4095)+m\n",
     "hits=np.empty([len(test_data[:,0,0]),len(test_data[0,0,:])]);\n",
     "for n in range(len(test_data[0,0,:])):\n",
     "    for m in range(len(test_data[:,0,0])):\n",
     "        hits[m][n]=sum(test_data[m,:,n]);\n",
-    "hits_store=run_store = np.savez_compressed('chronopixel_hits_%s' %run_start, hits); \n",
+    "path='/Users/walterwilson/Chronopixel Data Analysis/%s'%filename\n",
+    "file= open(path ,\"w\");\n",
+    "#hits_store= np.savez_compressed(filename, a=hits, b=time);\n",
+    "print(time)\n",
     "#I am getting an error when saving the files. It says the file is not UTF-8 encoded and so saving has been disabled."
    ]
   },
@@ -184,6 +168,7 @@
     }
    ],
    "source": [
+    "micro=\n",
     "pl.plot(time,hits);\n",
     "pl.show();"
    ]
