--- a/timestamp_experiment.ipynb
+++ b/timestamp_experiment.ipynb
@@ -2,11 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-3-72b31511af2e>, line 12)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-72b31511af2e>\"\u001b[0;36m, line \u001b[0;32m12\u001b[0m\n\u001b[0;31m    import .ok\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "import scipy as sc\n",
     "from scipy import optimize as op\n",
@@ -292,13 +301,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def save(data, start, t_stamp=4095,pixel=400, thres_volt=\"10 mV\", comment='Fill with any comments',temp='ex',\n",
+    "#IMPORTANT: The following four functions perform all of the tasks which were shown above such as reading in the data\n",
+    "# and creating the saved compressed file\n",
+    "#This first function will read in the data, put it in the correct format and save the file\n",
+    "#The required input is the data array from the signal\n",
+    "def save(data, start=d.datetime.utcnow(), t_stamp=4095,pixel=400, thres_volt=\"10 mV\", comment='Fill with any comments',temp='ex',\n",
     "freq='50MHz'):\n",
     "    filename= 'chronopixel_hits_%s.npz' %start;\n",
     "    metadata=np.chararray((6,2), unicode=True, itemsize=60); \n",
@@ -342,6 +355,8 @@
    },
    "outputs": [],
    "source": [
+    "#This function plots the different readout. The required inputs are the save file name \n",
+    "#and the number of readouts in the data collection\n",
     "def hits_plot(path, runs, begin=0, end=-1):\n",
     "    opened_file=np.load(path);\n",
     "    for n in range(runs): #Plotting the number of recorded hits at each timestamp for each of the readouts\n",
@@ -425,6 +440,7 @@
     }
    ],
    "source": [
+    "#Testing the functions\n",
     "data=r.randint(2, size=(4914000));\n",
     "print(len(data));\n",
     "run_start = d.datetime.utcnow(); \n",
@@ -440,6 +456,7 @@
    },
    "outputs": [],
    "source": [
+    "#This file combines all of the readouts into one continuous timestream and saves it as a new file\n",
     "def combine_runs(path, runs, start, t_stamp=4095,pixel=400,):\n",
     "    opened_file=np.load(path);\n",
     "    com_data=np.empty([runs*t_stamp]);\n",
@@ -464,6 +481,7 @@
    },
    "outputs": [],
    "source": [
+    "#Plots a single graph for the entire data collection\n",
     "def com_plot(path, begin=0, end=-1):\n",
     "    opened_file=np.load(path);\n",
     "    y=opened_file['data'][begin:end];\n",
@@ -501,6 +519,7 @@
     }
    ],
    "source": [
+    "#Testing the functions\n",
     "com_path = combine_runs(path, runs, run_start);\n",
     "com_file=np.load(com_path);\n",
     "com_plot(com_path);"
@@ -521,18 +540,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.0"
   }
  },
  "nbformat": 4,
